--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
-  "name": "untitled",
+  "name": "ServerDots",
   "version": "0.0.1",
-  "private": true,
+  "main": "Main.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node Main.js"
   },
   "dependencies": {
     "body-parser": "~1.0.0",
     "cookie-parser": "~1.0.1",
     "debug": "~0.7.4",
-    "express": "~4.2.0",
     "jade": "~1.3.0",
-    "mongodb": "^2.0.45",
-    "morgan": "~1.0.0",
-    "net": "^1.0.2",
     "node-static": "^0.7.7",
-    "socket.io": "^1.3.7",
     "static-favicon": "~1.0.0",
     "ws": "^0.8.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/WhiteKNS/ServerDots"
+  },
 }
