--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ServerDots",
   "version": "0.0.1",
+   "description": "A ",
   "main": "Main.js",
   "scripts": {
     "start": "node Main.js"
@@ -13,6 +14,9 @@
     "node-static": "^0.7.7",
     "static-favicon": "~1.0.0",
     "ws": "^0.8.0"
+  },
+   "engines": {
+    "node": "4.0.0"
   },
   "repository": {
     "type": "git",
